data/derived/comb/progs/unify/prog7630.ml.out
Characters 75-76:
  let fixpoint (f,b) = wwhile (let n x = let ff = f in (ff , b = ff(b)) in n,b);;
                                                                             ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
